--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
   </head>
   <body>
+  <div align="center">
     <h1>Is mir egal, ich lass das jetzt so!</h1>
-    <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    	<img src="media/done.jpg" width="600" heigth"450" alt="absolut-fertig" border="0"/>
+    </div>
+   	 <script src="http://code.jquery.com/jquery.js"></script>
+   	 <script src="js/bootstrap.min.js"></script>   
   </body>
 </html>
