--- a/index.html
+++ b/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-  	<meta charset="utf-8">
+      <meta charset="utf-8">
     <title>Bootstrap 101 Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <style type="text/css">
+      img {
+        border: 0;
+      }
+      .a{
+        text.align: center;
+      }
+    </style>
   </head>
   <body>
-  <div align="center">
+  <div class="a">
     <h1>Is mir egal, ich lass das jetzt so!</h1>
-    	<img src="media/done.jpg" width="600" heigth"450" alt="absolut-fertig" border="0"/>
+        <img src="media/done.jpg" width="600" heigth="450" alt="absolut-fertig"/>
     </div>
-   	 <script src="http://code.jquery.com/jquery.js"></script>
-   	 <script src="js/bootstrap.min.js"></script>   
+        <script src="http://code.jquery.com/jquery.js"></script>
+        <script src="js/bootstrap.min.js"></script>   
   </body>
 </html>
+ 
