--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
   <div class="a">
     <h1>Is mir egal, ich lass das jetzt so!</h1>
-        <img src="media/done.jpg" width="600" heigth="450" alt="absolut-fertig"/>
+        <img src="media/done.jpg" width="600" height="450" alt="absolut-fertig"/>
     </div>
         <script src="http://code.jquery.com/jquery.js"></script>
         <script src="js/bootstrap.min.js"></script>   
