--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         border: 0;
       }
       .a{
-        text.align: center;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
       }
     </style>
   </head>
