--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 	</head>
  
     <body>
+    	<p>
+<a href="http://validator.w3.org/check?uri=http%3A%2F%2Fsilkekathifranke.cloudcontrolled.com">
+<img src="http://www.w3.org/Icons/valid-xhtml10" alt="html-test"/></a>
+<a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fsilkekathifranke.cloudcontrolled.com%2F&amp;profile=css2">
+<img src="http://www.w3.org/Icons/valid-css2-blue" alt="css-test"/></a>
+</p>
+        
     	<h1>Hausaufgabe Kapitel 6</h1> 
     	<table style="border-collapse:collapse;">
     	<caption>Tabellendesign mit CSS</caption>
