--- a/impressum.html
+++ b/impressum.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Silke Franke">
     <link rel="shortcut icon" href="favicon.png">
 
-    <title>Web-Engineering I – Abschlussprüfung Kursteil I</title>
+    <title>Impressum – Web-Engineering I</title>
 
     <!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
@@ -51,7 +51,7 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">Über mich</a></li>
             <li class="dropdown">
               <a href="projects.html" class="dropdown-toggle" data-toggle="dropdown">Projekte <b class="caret"></b></a>
@@ -74,13 +74,10 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1>MOOC "WEB-ENGINEERING"</h1>
-        <p>Diese Website ist die Abschlussprüfung Teil I des Kurses Web-Engineering I: Grundlagen der Web-Entwicklung.</p>
-        <p>Hier gelangt man zu den 2 Teilaufgaben der Prüfung.</p>
-        <p>
-          <a class="btn btn-lg btn-primary" href="tabelle.html" role="button">XHTML 1.0 strict-Tabelle</a>
-          <a class="btn btn-lg btn-primary" href="suchform.html" role="button">Barrierefreies Wikipedia-Suchformular</a>
-        </p>
+      	<p>Angaben gemäß § 5 TMG:</p>
+        <h3>Silke Kathi Franke</h3>
+        <p>Kontakt:</p>
+        <p>E-Mail: <a href="mailto:&#104;&#97;&#108;&#108;&#111;&#64;&#102;&#114;&#97;&#117;&#45;&#102;&#46;&#100;&#101;">&#104;&#97;&#108;&#108;&#111;&#64;&#102;&#114;&#97;&#117;&#45;&#102;&#46;&#100;&#101;</a></p>
       </div>
 
 		<hr>
@@ -89,7 +86,6 @@
       <div class="footer">
         <p>&copy; Silke Kathi Franke, Aachen 2014</p>
       </div>
-
       	
     </div> <!-- /container -->
 
