--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Silke Franke">
     <link rel="shortcut icon" href="favicon.png">
 
-    <title>Web-Engineering I – Abschlussprüfung Kursteil I</title>
+    <title>Über mich – Web-Engineering I</title>
 
     <!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
@@ -51,8 +51,8 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="about.html">Über mich</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="about.html">Über mich</a></li>
             <li class="dropdown">
               <a href="projects.html" class="dropdown-toggle" data-toggle="dropdown">Projekte <b class="caret"></b></a>
               <ul class="dropdown-menu">
@@ -64,7 +64,7 @@
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-          	<li><a href="impressum.html">Impressum</a></li>
+            <li><a href="impressum.html">Impressum</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -74,22 +74,17 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1>MOOC "WEB-ENGINEERING"</h1>
-        <p>Diese Website ist die Abschlussprüfung Teil I des Kurses Web-Engineering I: Grundlagen der Web-Entwicklung.</p>
-        <p>Hier gelangt man zu den 2 Teilaufgaben der Prüfung.</p>
-        <p>
-          <a class="btn btn-lg btn-primary" href="tabelle.html" role="button">XHTML 1.0 strict-Tabelle</a>
-          <a class="btn btn-lg btn-primary" href="suchform.html" role="button">Barrierefreies Wikipedia-Suchformular</a>
-        </p>
+        <h1>Ich bin Diplom-Designerin in Aachen, Deutschland</h1>
+        <p>Neben meiner gestalterischen Tätigkeit tüftle ich für mein Leben gern an allem Neuen, Schwierigen und Kniffligen. </p>
+        <p>Dieser Kurs ist eine wahre Spielwiese für mich.</p>
       </div>
-
+      
 		<hr>
-		
-		<!-- Site footer -->
+
+	<!-- Site footer -->
       <div class="footer">
         <p>&copy; Silke Kathi Franke, Aachen 2014</p>
       </div>
-
       	
     </div> <!-- /container -->
 
