--- a/suchform.html
+++ b/suchform.html
@@ -3,7 +3,7 @@
 <html lang="de">
 <head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />		
-		<link type="text/css" rel="stylesheet" href="suchform.css"></link>
+		<link type="text/css" rel="stylesheet" href="css/suchform.css"></link>
 		<title>Suchformular</title>
 	</head>
 	
