--- a/tabelle.html
+++ b/tabelle.html
@@ -13,7 +13,7 @@
     	<p>
 <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fsilkekathifranke.cloudcontrolled.com/tabelle.html">
 <img src="http://www.w3.org/Icons/valid-xhtml10" alt="html-test"/></a>
-<a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fsilkekathifranke.cloudcontrolled.com%2Ftabelle.html&profile=css21&usermedium=all&warning=1&vextwarning=">
+<a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fsilkekathifranke.cloudcontrolled.com%2Ftabelle.html&amp;profile=css2">
 <img src="http://www.w3.org/Icons/valid-css2-blue" alt="css-test"/></a>
 </p>
         
