--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="about.html">Über mich</a></li>
             <li class="dropdown">
-              <a href="projects.html" class="dropdown-toggle" data-toggle="dropdown">Projekte <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projekte <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="index1.html">Erste Website in der Cloud</a></li>
                 <li><a href="http://www.codecademy.com/de/frau-f">Interaktives Praktikum</a></li>
