neue index ohne dropdown

--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">Über mich</a></li>
-            <li class="dropdown">
+            <!-- li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projekte <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="index1.html">Erste Website in der Cloud</a></li>
                 <li><a href="http://www.codecademy.com/de/frau-f">Interaktives Praktikum</a></li>
                 <li><a href="tabelle.html">Mit CSS formatierte Tabelle aller "XHTML 1.0 strict"-Elemente</a></li>
                 <li><a href="suchform.html">Barrierefreies Suchformular</a></li>
-              </ul>
+              </ul> -->
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
