--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="about.html">Über mich</a></li>
-            <li class="dropdown">
+             <!-- li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projekte <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="index1.html">Erste Website in der Cloud</a></li>
@@ -61,7 +61,7 @@
                 <li><a href="tabelle.html">Mit CSS formatierte Tabelle aller "XHTML 1.0 strict"-Elemente</a></li>
                 <li><a href="suchform.html">Barrierefreies Suchformular</a></li>
               </ul>
-            </li>
+            </li> -->
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="impressum.html">Impressum</a></li>
